# beatcomputer

./: .clang-format  .syntastic_cpp_config  CMakeLists.txt  LICENSE  instructions.md  readme.md  run_clang_format.sh
clangbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
clangbuild/gtest/: Makefile  cmake_install.cmake
clangbuild/sequencer/: Makefile  cmake_install.cmake
clangbuild/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clangbuild/time_server/: Makefile  cmake_install.cmake
lib/: CMakeLists.txt  boxed_window.h  core.cpp  cursor_storage.cpp  cursor_storage.h  editor.cpp  editor.h  editor_command.cpp  editor_command.h  input.cpp  input.h  instruction_descriptor.h  instruction_list.cpp  instruction_manager.cpp  instruction_manager.h  instruction_set.cpp  instruction_set.h  instructions.cpp  listener_list.h  logger.h  osc_receiver.cpp  osc_receiver.h  string_builder.h  text_editor.cpp  text_editor.h  trim.cpp  window.cpp  window.h
max/: main.maxpat
ncurses_tests/: CMakeLists.txt  window_test.cpp  windowing.cpp
python_curses/: main.py
sequencer/: CMakeLists.txt  boxed_window.h  core.cpp  core.h  cursor_storage.cpp  editor.cpp  editor.h  editor_command.cpp  editor_command.h  input.cpp  instruction_descriptor.h  instruction_list.cpp  instruction_list.h  instruction_manager.cpp  instruction_manager.h  instruction_set.cpp  instruction_set.h  instruction_structs.cpp  instruction_structs.h  instructions.cpp  instructions.h  logger.cpp  logger.h  main.cpp  parse_functions.cpp  parse_functions.h  string_builder.h  test.mips  text_editor.cpp  text_editor.h  threaded_queue.h  trim.cpp  trim.h  window.cpp  window.h
src/: CMakeLists.txt  assembler.cpp  assembler.h  core.cpp  core.h  instruction_descriptor.cpp  instruction_descriptor.h  instruction_list.cpp  instruction_list.h  instruction_manager.cpp  instruction_manager.h  instruction_structs.cpp  instruction_structs.h  instructions.cpp  instructions.h  main.cpp  opcodes.h  parse_functions.cpp  parse_functions.h  test.mips  trim.cpp  window.cpp  window.h
supercollider/: osc_responder.scd
tests/: CMakeLists.txt  instruction_ADD_I.cpp  instruction_ADD_R.cpp  instruction_DIV_I.cpp  instruction_DIV_R.cpp  instruction_MUL_I.cpp  instruction_MUL_R.cpp  instruction_NOP.cpp  instruction_SUB_I.cpp  instruction_SUB_R.cpp  instruction_fixture.h  main.cpp  parse.cpp
time_server/: CMakeLists.txt  main.cpp  timer.h
